--- a/funtime.html
+++ b/funtime.html
@@ -5,9 +5,55 @@
         <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
-        <h1>FunTime</h1>
+      <div class="class1">
+        <table>
+        <thead>
+            <tr>
+                <td>.</td>
+                <td>.</td>
+                <td>.</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>.</td>
+                <td>.</td>
+                <td>.</td>
+            </tr>
+            <tr>
+                <td>.</td>
+                <td>.</td>
+                <td>.</td>
+            </tr>
+        </tbody>
+      </table> 
+    </div>
+    <div class="class2">
+      <table>
+        <thead>
+            <tr>
+                <td>.</td>
+                <td>.</td>
+                <td>.</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>.</td>
+                <td>.</td>
+                <td>.</td>
+            </tr>
+            <tr>
+                <td>.</td>
+                <td>.</td>
+                <td>.</td>
+            </tr>
+        </tbody>
+      </table>  
+    </div> 
     </body>
 </html>
-<div class="fun">
-<h1>FunTime top</h1>
-</div>
+
+
+
+
