--- a/funtime.html
+++ b/funtime.html
@@ -5,53 +5,38 @@
         <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
-      <div class="class1">
-        <table>
-        <thead>
-            <tr>
-                <td>.</td>
-                <td>.</td>
-                <td>.</td>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>.</td>
-                <td>.</td>
-                <td>.</td>
-            </tr>
-            <tr>
-                <td>.</td>
-                <td>.</td>
-                <td>.</td>
-            </tr>
-        </tbody>
-      </table> 
-    </div>
-    <div class="class2">
-      <table>
-        <thead>
-            <tr>
-                <td>.</td>
-                <td>.</td>
-                <td>.</td>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>.</td>
-                <td>.</td>
-                <td>.</td>
-            </tr>
-            <tr>
-                <td>.</td>
-                <td>.</td>
-                <td>.</td>
-            </tr>
-        </tbody>
-      </table>  
-    </div> 
-    <p>ку</p>
+        <div class="content-wrapper">
+            <div class="center-content">
+                <div class="text">
+                    <div class="inag">
+                        <img class="man" src="Изображение WhatsApp 2023-07-09 в 14.42.05.jpg" alt="Игорь">
+                    </div>
+                    <h1>Фролов Тимур</h1>
+                    <p class="pod">
+                        Привет, меня зовут Тимур, и мне 12 лет. Цель моего сайта заключается в том, чтобы описать мои достижения, умения и цели в программировании, чтобы люди видели, что я серьезно отношусь к этой области и что она мне действительно нравится.</p>                    
+                        <h2>Мои навыки</h2>
+                        <p>Я владею не только основами HTML, CSS и работы с Git и GitHub, но и более продвинутыми концепциями, такими как flex-бокс, стилизация элементов, создание таблиц и позиционирование объектов. Мои навыки позволяют мне создавать более сложные и интерактивные веб-страницы, в которых я могу управлять расположением и внешним видом элементов с использованием различных стилей и методов позиционирования.</p>
+                        <div class="img">
+                        <img src="CSS.jpg" alt="CSS">
+                        <img src="github.jpg" alt="github">
+                        <img src="html.jpg" alt="html">
+                        </div>
+                        <br>
+                        <div class="classes">CSS GITHUB HTML</div>
+                        <p>Одной из моих главных целей является создание собственной игры к концу этого месяца. Я увлекаюсь играми и хочу попробовать свои силы в разработке. Я изучаю различные языки программирования и инструменты, чтобы реализовать свои идеи. Моя цель - создать интересную и захватывающую игру, которая будет радовать людей.</p>
+                        <img src="timur.jpg" alt="Тимур">
+                        <p>Кроме того, я имею амбициозную цель начать зарабатывать деньги с помощью того, что я уже изучил. Я понимаю, что программирование предоставляет множество возможностей для монетизации, и я хочу научиться использовать свои навыки для создания полезных и интересных продуктов, которые смогут приносить мне доход.</p>
+                        <p class="telegram">Со мной можно связаться в телеграм</p>
+                        <p class="emci">@emcided</p>
+                        <img class="star1" src="star.jpg" alt="star1">
+                        <img class="star2" src="star.jpg" alt="star1">
+                        <img class="coins" src="coins.jpg" alt="coins">
+                </div> 
+            </div>
+        </div>
+     
+   
+        
     </body>
 </html>
 
